--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
+    "vue-loader": "^15.10.1",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
