--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "createjs": "^1.0.1",
+    "createjs-module": "^0.8.3",
+    "easeljs": "^1.0.2",
     "element-ui": "^2.15.12",
+    "eventemitter2": "^6.4.9",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "ros2d": "^0.10.0",
+    "roslib": "^1.3.0",
     "vue": "^2.6.14",
     "vue-loader": "^15.10.1",
     "vue-router": "^3.6.5",
